--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -125,6 +125,9 @@ Vagrant.configure(vagrantfile_api_version) do |config|
        # from eth0 because of the above patch.
        export STY="dummy"
        install-suse-cloud -v
+       . /etc/profile.d/crowbar.sh
+       crowbar network allocate_ip default cloud3-admin.openstack.site public host
+       chef-client
     EOSCRIPT
   end
 
